--- a/docs/Intro.story.mdx
+++ b/docs/Intro.story.mdx
@@ -1,30 +1,34 @@
-<p align="center">
-  <h1>🛠 RDK - Component ToolKit</h1>
-  <a href="https://circleci.com/gh/jask-oss/rdk">
-    <img src="https://circleci.com/gh/jask-oss/rdk.svg?style=svg" />
-  </a>
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Docs|Intro" />
+
+<div style={{ margin: '0 auto', maxWidth: '600px', color: 'white', textAlign: 'center' }}>
+  🛠 RDK
+  <br />
+  Component ToolKit
+  <br /><br />
   <a href="https://npm.im/rdk">
     <img src="https://img.shields.io/npm/v/rdk.svg" />
-  </a>
-  <a href="https://npm.im/rdk">
-    <img src="https://badgen.net/npm/dw/rdk" />
-  </a>
+  </a>&nbsp;&nbsp;
   <a href="https://github.com/jask-oss/rdk/blob/master/LICENSE">
     <img src="https://badgen.now.sh/badge/license/apache2" />
+  </a>&nbsp;&nbsp;
+  <a href="https://circleci.com/gh/jask-oss/rdk">
+    <img src="https://circleci.com/gh/jask-oss/rdk.svg?style=svg" />
+  </a>&nbsp;&nbsp;
+   <a href="https://bundlephobia.com/result?p=rdk">
+    <img src="https://badgen.net/bundlephobia/minzip/rdk" />
+  </a>&nbsp;&nbsp;
+  <a href="https://github.com/jask-oss/rdk">
+    <img alt="GitHub stars" src="https://img.shields.io/github/stars/jask-oss/rdk?style=social" />
   </a>
-  <a href="https://bundlephobia.com/result?p=rdk">
-    <img src="https://badgen.net/bundlephobia/minzip/rdk">
-  </a>
-</p>
+</div>
 
 ---
 
 RDK is a set of low-level tools that implement common interactions found in
 component libraries. The tooling abstracts the visual
 presentation so the tools can be used with any visual presentation.
-
-## 🚀 Quick Links
-- Checkout the [demos and docs](https://jask-oss.github.io/rdk/)
 
 ## ✨ Features
 
@@ -62,7 +66,8 @@ locked to that specific version.
 }
 ```
 
-Visit the [demos page](https://jask-oss.github.io/rdk/) to learn more!
+If you later want to again update to the bleeding edge, you will have to run the above command again.
+
 
 ## 🔭 Development
 
