--- a/docs/Intro.story.mdx
+++ b/docs/Intro.story.mdx
@@ -10,17 +10,17 @@ import { Meta } from '@storybook/addon-docs/blocks';
   <a href="https://npm.im/rdk">
     <img src="https://img.shields.io/npm/v/rdk.svg" />
   </a>&nbsp;&nbsp;
-  <a href="https://github.com/jask-oss/rdk/blob/master/LICENSE">
+  <a href="https://github.com/reaviz/rdk/blob/master/LICENSE">
     <img src="https://badgen.now.sh/badge/license/apache2" />
   </a>&nbsp;&nbsp;
-  <a href="https://circleci.com/gh/jask-oss/rdk">
-    <img src="https://circleci.com/gh/jask-oss/rdk.svg?style=svg" />
+  <a href="https://circleci.com/gh/reaviz/rdk">
+    <img src="https://circleci.com/gh/reaviz/rdk.svg?style=svg" />
   </a>&nbsp;&nbsp;
    <a href="https://bundlephobia.com/result?p=rdk">
     <img src="https://badgen.net/bundlephobia/minzip/rdk" />
   </a>&nbsp;&nbsp;
-  <a href="https://github.com/jask-oss/rdk">
-    <img alt="GitHub stars" src="https://img.shields.io/github/stars/jask-oss/rdk?style=social" />
+  <a href="https://github.com/reaviz/rdk">
+    <img alt="GitHub stars" src="https://img.shields.io/github/stars/reaviz/rdk?style=social" />
   </a>
 </div>
 
