update storybook, fix stories, fix scroll event on position

--- a/docs/components/Backdrop.story.mdx
+++ b/docs/components/Backdrop.story.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 import { Backdrop } from '../../src';
 
-<Meta title="Docs|Components/Backdrop" />
+<Meta title="Docs/Components/Backdrop" />
 
 # Backdrop
 
