--- a/docs/components/ExitListener.story.mdx
+++ b/docs/components/ExitListener.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Docs|Components/Exit Listener" />
+<Meta title="Docs/Components/Exit Listener" />
 
 # Exit Listener
 
