--- a/docs/components/Id.story.mdx
+++ b/docs/components/Id.story.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 import { useId } from '../../src';
 
-<Meta title="Docs|Utils/Id" />
+<Meta title="Docs/Utils/Id" />
 
 # Id
 
