--- a/docs/components/Overlay.story.mdx
+++ b/docs/components/Overlay.story.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 import { ConnectedOverlay, GlobalOverlay, OverlayTrigger, OverlayPortal } from '../../src';
 
-<Meta title="Docs|Components/Overlay" />
+<Meta title="Docs/Components/Overlay" />
 
 # Overlay
 
