--- a/docs/components/Portal.story.mdx
+++ b/docs/components/Portal.story.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 import { Portal } from '../../src';
 
-<Meta title="Docs|Components/Portal" />
+<Meta title="Docs/Components/Portal" />
 
 # Portal
 
