--- a/docs/components/Position.story.mdx
+++ b/docs/components/Position.story.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 import { Position } from '../../src';
 
-<Meta title="Docs|Components/Position" />
+<Meta title="Docs/Components/Position" />
 
 # Position
 
