--- a/docs/components/Overlay.story.mdx
+++ b/docs/components/Overlay.story.mdx
@@ -22,16 +22,10 @@ There are five overlay components in the Overlay:
 
 ### Global Overlay
 A overlay component typically used by components like Dialogs or Drawers.
-You can use the Global Ovleray using hooks or element APIs.
+You can use the Global Ovleray using element APIs.
 
-#### Element
 <Preview withSource="open">
   <Story id="utilities-overlay-global--click-to-open" />
-</Preview>
-
-#### Hooks
-<Preview withSource="open">
-  <Story id="utilities-overlay-global--hooks" />
 </Preview>
 
 #### Dialog Example
