--- a/docs/components/Position.story.mdx
+++ b/docs/components/Position.story.mdx
@@ -1,5 +1,4 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
-import { Position } from '../../src';
 
 <Meta title="Docs/Components/Position" />
 
@@ -12,19 +11,8 @@ with respect to their target element. Under the hood this component
 uses [Popper.js](https://popper.js.org/).
 
 ## Demo
-This component can be used using hooks or element API.
+This component can be used using hooks API.
 
-### Hooks
 <Preview withSource="open">
   <Story id="utilities-position--hook" />
 </Preview>
-
-### Element
-<Preview withSource="open">
-  <Story id="utilities-position--element" />
-</Preview>
-
-## API
-### [src/Position/Position.tsx](https://github.com/reaviz/rdk/blob/master/src/Position/Position.tsx)
-<Props of={Position} />
-
