fix intro story

--- a/docs/Intro.story.mdx
+++ b/docs/Intro.story.mdx
@@ -6,21 +6,25 @@ import { Meta } from '@storybook/addon-docs/blocks';
   🛠 RDK
   <br />
   Component ToolKit
-  <br /><br />
+  <br />
+  <br />
+  <a href="https://github.com/reaviz/rdk/workflows/build/">
+    <img src="https://github.com/reaviz/rdk/workflows/build/badge.svg?branch=master" />
+  </a>&nbsp;&nbsp;
   <a href="https://npm.im/rdk">
     <img src="https://img.shields.io/npm/v/rdk.svg" />
+  </a>&nbsp;&nbsp;
+  <a href="https://npm.im/rdk">
+    <img src="https://badgen.net/npm/dw/rdk" />
   </a>&nbsp;&nbsp;
   <a href="https://github.com/reaviz/rdk/blob/master/LICENSE">
     <img src="https://badgen.now.sh/badge/license/apache2" />
   </a>&nbsp;&nbsp;
-  <a href="https://circleci.com/gh/reaviz/rdk">
-    <img src="https://circleci.com/gh/reaviz/rdk.svg?style=svg" />
-  </a>&nbsp;&nbsp;
-   <a href="https://bundlephobia.com/result?p=rdk">
+  <a href="https://bundlephobia.com/result?p=rdk">
     <img src="https://badgen.net/bundlephobia/minzip/rdk" />
   </a>&nbsp;&nbsp;
-  <a href="https://github.com/reaviz/rdk">
-    <img alt="GitHub stars" src="https://img.shields.io/github/stars/reaviz/rdk?style=social" />
+  <a href="https://discord.gg/tt8wGExq35">
+    <img src="https://img.shields.io/discord/773948315037073409?label=discord" />
   </a>
 </div>
 
