fix stories, update things

--- a/docs/components/Portal.story.mdx
+++ b/docs/components/Portal.story.mdx
@@ -13,16 +13,10 @@ inject elements to the body rather than having to manually do that
 via the core method in React.
 
 ## Demo
-This component can be used via hooks or element api.
+This component can be used via element api.
 
-### Hook
 <Preview withSource="open">
-  <Story id="utilities-portal--hook" />
-</Preview>
-
-### Element
-<Preview withSource="open">
-  <Story id="utilities-portal--element" />
+  <Story id="examples-portal--simple" />
 </Preview>
 
 ## API
