--- a/docs/components/Position.story.mdx
+++ b/docs/components/Position.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
 
 <Meta title="Docs/Components/Position" />
 
