--- a/docs/components/Backdrop.story.mdx
+++ b/docs/components/Backdrop.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
 import { Backdrop } from '../../src';
 
 <Meta title="Docs/Components/Backdrop" />
