--- a/docs/components/ExitListener.story.mdx
+++ b/docs/components/ExitListener.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Preview } from '@storybook/addon-docs';
 
 <Meta title="Docs/Components/Exit Listener" />
 
