--- a/docs/components/Portal.story.mdx
+++ b/docs/components/Portal.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
 import { Portal } from '../../src';
 
 <Meta title="Docs/Components/Portal" />
