--- a/docs/Intro.story.mdx
+++ b/docs/Intro.story.mdx
@@ -41,6 +41,9 @@ presentation so the tools can be used with any visual presentation.
 - Portal - Provides a flexible system for rendering dynamic content into an application
 - Position - Provides a flexible system for placing panels related to other elements
 - Backdrop - Blocker element overlay
+- Id - A unique ID hook
+- User Select - A user select hook
+- Cursor - A cursor hook
 
 ## 📦 Install
 
