--- a/docs/components/Id.mdx
+++ b/docs/components/Id.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 import { useId } from '../../src';
 
 <Meta title="Docs/Utils/Id" />
