--- a/docs/components/Position.mdx
+++ b/docs/components/Position.mdx
@@ -1,4 +1,5 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
+import { Meta, Canvas } from '@storybook/addon-docs';
+import * as PositionStories from '../../src/Position/Position.story'
 
 <Meta title="Docs/Components/Position" />
 
@@ -13,6 +14,4 @@ uses [Popper.js](https://popper.js.org/).
 ## Demo
 This component can be used using hooks API.
 
-<Preview withSource="open">
-  <Story id="examples-position--simple" />
-</Preview>
+<Canvas of={PositionStories.Simple} />
