--- a/docs/components/UserSelect.mdx
+++ b/docs/components/UserSelect.mdx
@@ -1,5 +1,4 @@
-import { Meta, Story, Props, Preview } from '@storybook/addon-docs';
-import { useId } from '../../src';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Docs/Utils/User Select" />
 
