Open source by default

--- a/docs/components/Backdrop.mdx
+++ b/docs/components/Backdrop.mdx
@@ -12,7 +12,7 @@ Backdrop is a component that overlays a certain viewport to
 prevent users from clicking the bottom layer and draw attention
 to the content. This component is typically used with a `Overlay` component.
 
-<Canvas of={BackdropStories.Simple} />
+<Canvas of={BackdropStories.Simple} sourceState="shown"/>
 
 ## API
 ### [src/Backdrop/Backdrop.tsx](https://github.com/reaviz/rdk/blob/master/src/Backdrop/Backdrop.tsx)
