--- a/docs/components/ExitListener.mdx
+++ b/docs/components/ExitListener.mdx
@@ -16,4 +16,4 @@ to listen for events if a user clicks anywhere but our menu to notify
 the parent to close it.
 
 ## Demo
-<Canvas of={ExitListenerStories.Simple} />
+<Canvas of={ExitListenerStories.Simple} sourceState="shown" />
