--- a/docs/components/Portal.mdx
+++ b/docs/components/Portal.mdx
@@ -15,7 +15,7 @@ via the core method in React.
 ## Demo
 This component can be used via element api.
 
-<Canvas of={PortalStories.Simple} />
+<Canvas of={PortalStories.Simple} sourceState="shown" />
 
 ## API
 ### [src/Portal/Portal.tsx](https://github.com/reaviz/rdk/blob/master/src/Portal/Portal.tsx)
