--- a/docs/components/Position.mdx
+++ b/docs/components/Position.mdx
@@ -14,4 +14,4 @@ uses [Popper.js](https://popper.js.org/).
 ## Demo
 This component can be used using hooks API.
 
-<Canvas of={PositionStories.Simple} />
+<Canvas of={PositionStories.Simple} sourceState="shown" />
