fix build, remove chromatic

--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -55,7 +55,7 @@ presentation so the tools can be used with any visual presentation.
 To use RDK in your project, install it via npm/yarn:
 
 ```
-yarn add rdk
+npm i rdk --save
 ```
 
 ## 🔭 Development
@@ -63,6 +63,6 @@ yarn add rdk
 If you want to run RDK locally, its super easy!
 
 - Clone the repo
-- `yarn install`
-- `yarn start`
+- `npm i`
+- `npm start`
 - Browser opens to Storybook page
